init[db]: 新增初始化sql和连接数据库配置

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,4 +1,10 @@
 
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/spring-boot-template
+    username: spring-boot-template
+    password: spring-boot-template
+
 management:
   endpoints:
     web:
