--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,33 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.4.2</version>
+				<configuration>
+					<!--mybatis的代码生成器的配置文件-->
+					<configurationFile>src/main/resources/mybatis-generator-config.xml</configurationFile>
+					<!--允许覆盖生成的文件-->
+					<overwrite>true</overwrite>
+					<!--将当前pom的依赖项添加到生成器的类路径中-->
+					<!--<includeCompileDependencies>true</includeCompileDependencies>-->
+				</configuration>
+				<dependencies>
+					<!--mybatis-generator插件的依赖包-->
+					<!--<dependency>-->
+					<!--<groupId>org.mybatis.generator</groupId>-->
+					<!--<artifactId>mybatis-generator-core</artifactId>-->
+					<!--<version>1.3.7</version>-->
+					<!--</dependency>-->
+					<!-- postgresql的JDBC驱动 -->
+					<dependency>
+						<groupId>org.postgresql</groupId>
+						<artifactId>postgresql</artifactId>
+						<version>${postgresql.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 		</plugins>
 	</build>
 
