--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,10 @@ spring:
   profiles:
     active: dev
 
+  mvc:
+    format:
+      date: yyyy-MM-dd HH:mm:ss
+
 
 mybatis:
   mapper-locations: classpath:mapper/**.xml
