--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,8 +27,8 @@ pagehelper:
 
 springdoc:
   api-docs:
-    path: /api-docs
+    path: api-docs
   swagger-ui:
-    url: /api-docs
+    url: ../api-docs
     tagsSorter: alpha
     operationsSorter: method
